[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/image/solid-white.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Jost-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/main-scene.gd" type="Script" id=3]
[ext_resource path="res://assets/image/button/back-button.png" type="Texture" id=4]
[ext_resource path="res://assets/image/button/character-button [5839239].png" type="Texture" id=5]
[ext_resource path="res://assets/image/button/character-button [B2B22FF].png" type="Texture" id=6]
[ext_resource path="res://assets/image/button/character-button [A31D7F9].png" type="Texture" id=7]
[ext_resource path="res://assets/image/button/character-button [B0CA523].png" type="Texture" id=8]
[ext_resource path="res://assets/image/button/back-button-hovernpressed.png" type="Texture" id=9]
[ext_resource path="res://tres/button-bnw.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=1]
size = 58
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="CenterContainer4" type="CenterContainer" parent="."]
margin_left = 19.0
margin_top = 19.0
margin_right = 139.0
margin_bottom = 139.0
rect_min_size = Vector2( 100, 100 )

[node name="backbutton" type="TextureButton" parent="CenterContainer4"]
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -200.0
margin_right = -40.0
margin_bottom = -40.0
rect_min_size = Vector2( 100, 100 )

[node name="battlebutton" type="Button" parent="CenterContainer2"]
margin_right = 240.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 160 )
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 1 )
text = "BATTLE"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -160.0
margin_right = 305.0
margin_bottom = -40.0
rect_min_size = Vector2( 240, 120 )
custom_constants/separation = 25

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )

[node name="charbutton" type="TextureButton" parent="HBoxContainer/CenterContainer3"]
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
stretch_mode = 4

[node name="CenterContainer4" type="CenterContainer" parent="HBoxContainer"]
margin_left = 145.0
margin_right = 265.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )

[node name="shopbutton" type="TextureButton" parent="HBoxContainer/CenterContainer4"]
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
stretch_mode = 4

[connection signal="pressed" from="CenterContainer4/backbutton" to="." method="_on_backbutton_pressed"]
[connection signal="pressed" from="CenterContainer2/battlebutton" to="." method="_on_battlebutton_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer3/charbutton" to="." method="_on_charbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer4/shopbutton" to="." method="_on_shopbutton_pressed"]
